# app/mgmt/docs/swagger.yaml
@@ -536,10 +536,17 @@ definitions:
           $ref: '#/definitions/pb.MSMenu'
         type: array
     type: object
-  pb.GetSelfMSUserDetailReq:
+  pb.GetSelfMSUserDetailResp:
     properties:
-      commonReq:
-        $ref: '#/definitions/pb.CommonReq'
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+      permissions:
+        description: '权限集合: [[*]=>所有权限, [''article:add'']=>部分权限]'
+        items:
+          type: string
+        type: array
+      user:
+        $ref: '#/definitions/pb.MSUser'
     type: object
   pb.GetServerAllConfigResp:
     properties:
@@ -979,6 +986,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1004,6 +1016,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1033,6 +1050,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1060,6 +1082,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1085,6 +1112,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1129,6 +1161,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1154,6 +1191,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1183,6 +1225,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1208,6 +1255,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1237,6 +1289,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1262,6 +1319,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1291,13 +1353,18 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: 响应数据
           schema:
-            $ref: '#/definitions/pb.GetSelfMSUserDetailReq'
+            $ref: '#/definitions/pb.GetSelfMSUserDetailResp'
       summary: 获取自己的管理员详情
       tags:
       - 管理员相关接口
@@ -1310,6 +1377,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1339,6 +1411,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1364,6 +1441,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1393,6 +1475,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1418,6 +1505,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1447,6 +1539,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1472,6 +1569,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1501,6 +1603,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1526,6 +1633,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1555,6 +1667,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1582,6 +1699,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1607,6 +1729,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       produces:
@@ -1652,6 +1779,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1677,6 +1809,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1706,6 +1843,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1731,6 +1873,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
@@ -1760,6 +1907,11 @@ paths:
         name: Token
         required: true
         type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
       - description: 请求参数
         in: body
         name: object
@@ -1785,6 +1937,11 @@ paths:
       - description: 用户令牌
         in: header
         name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
         required: true
         type: string
       - description: 请求参数
